tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/TemplateApproval__c.object-meta.xml
<CustomObject>
    <description>Custom approval records for interview template publishing. Routes approvals to Program Director instead of native approval process.</description>
    <label>Template Approval</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Template Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>