tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User (Program Director) who will approve this template</description>
    <inlineHelpText>The Program Director assigned to make this approval decision</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Template Approvals</relationshipLabel>
    <relationshipName>TemplateApprovals_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>