tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audit_Notes__c</fullName>
    <description>System-generated audit trail (immutable): timestamps of state changes, approver actions, etc.</description>
    <inlineHelpText>Read-only audit trail of all changes to this approval</inlineHelpText>
    <label>Audit Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>