tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Approver comments or feedback</description>
    <inlineHelpText>Optional feedback from approver</inlineHelpText>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>