tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>DateTime when approver made decision (Approved or Rejected)</description>
    <inlineHelpText>Timestamp of approval decision</inlineHelpText>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>