tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to escalate to if approval needs manual review</description>
    <inlineHelpText>Escalate to this user if needed</inlineHelpText>
    <label>Escalated To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Template Approvals (Escalated)</relationshipLabel>
    <relationshipName>TemplateApprovals_Escalated</relationshipName>
    <type>Lookup</type>
</CustomField>