tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Escalation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this approval for manual escalation (e.g., if SLA missed)</description>
    <inlineHelpText>Check to flag for manual review</inlineHelpText>
    <label>Escalation Flag</label>
    <type>Checkbox</type>
</CustomField>