tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/InterviewTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the interview template being approved</description>
    <inlineHelpText>The template that requires approval</inlineHelpText>
    <label>Interview Template</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>Template Approvals</relationshipLabel>
    <relationshipName>TemplateApprovals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>