tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Linter_Report__c.field-meta.xml
<CustomField>
    <fullName>Linter_Report__c</fullName>
    <description>Copy of linter report at time of submission (audit trail)</description>
    <inlineHelpText>Linter findings snapshot for this approval</inlineHelpText>
    <label>Linter Report</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>