tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Mobile_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Manifest__c</fullName>
    <description>Copy of mobile manifest at time of submission (audit trail)</description>
    <inlineHelpText>Mobile manifest snapshot for this approval</inlineHelpText>
    <label>Mobile Manifest</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>