tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Program context for this approval (linked from template)</description>
    <inlineHelpText>The program associated with this template approval</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Template Approvals</relationshipLabel>
    <relationshipName>TemplateApprovals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>