tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason for rejection (if Status = Rejected)</description>
    <inlineHelpText>Why was this template rejected?</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Requires Changes</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>