tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>DateTime when approval was resolved (approved or rejected)</description>
    <inlineHelpText>When approver took action</inlineHelpText>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>