tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Approval status: Pending, Approved, or Rejected</description>
    <inlineHelpText>Current approval status</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Auto-Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>