tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the template for approval</description>
    <inlineHelpText>The creator/publisher who submitted this template</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Template Approvals (Submitted By)</relationshipLabel>
    <relationshipName>TemplateApprovals_Submitted_By</relationshipName>
    <type>Lookup</type>
</CustomField>