tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>DateTime when template was submitted for approval</description>
    <inlineHelpText>When this approval was requested</inlineHelpText>
    <label>Submitted Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>