tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/fields/Template_Version__c.field-meta.xml
<CustomField>
    <fullName>Template_Version__c</fullName>
    <description>Version identifier of template at time of approval submission</description>
    <inlineHelpText>Version of template</inlineHelpText>
    <label>Template Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>