tgthrProgramManagement/force-app/main/default/objects/TemplateApproval__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>InterviewTemplate__c</columns>
    <columns>Program__c</columns>
    <columns>Approver__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Approvals</label>
    <language>en_US</language>
</ListView>